# erpassist

./: COMPLETE_ACTIONS_LIST.md  INSTALL.txt  INSTALLATION.md  MANIFEST.in  README.md  SKIP_ASSETS_INSTALL.md  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
erpassist/: __init__.py  hooks.py  install.py  modules.txt
erpassist/erpassist/api/: chat.py
erpassist/erpassist/core/: action_registry.py  actions_data.py  audit_logger.py  executor.py  orchestrator.py  permission_guard.py
erpassist/erpassist/doctype/: __init__.py
erpassist/erpassist/doctype/erpassist_action_registry/: erpassist_action_registry.json  erpassist_action_registry.py
erpassist/erpassist/doctype/erpassist_action_role/: erpassist_action_role.json  erpassist_action_role.py
erpassist/erpassist/doctype/erpassist_audit_log/: erpassist_audit_log.json  erpassist_audit_log.py
erpassist/erpassist/doctype/erpassist_chat_message/: erpassist_chat_message.json  erpassist_chat_message.py
erpassist/erpassist/doctype/erpassist_chat_session/: erpassist_chat_session.json  erpassist_chat_session.py
erpassist/erpassist/doctype/erpassist_enabled_module/: erpassist_enabled_module.json  erpassist_enabled_module.py
erpassist/erpassist/doctype/erpassist_settings/: erpassist_settings.json  erpassist_settings.py
erpassist/erpassist/handlers/: accounting.py  assets.py  buying.py  crm.py  hr.py  maintenance.py  manufacturing.py  payroll.py  projects.py  quality.py  selling.py  stock.py  support.py
erpassist/erpassist/module_def/: __init__.py
erpassist/erpassist/module_def/erpassist/: erpassist.json
erpassist/erpassist/workspace/erpassist/: erpassist.json
erpassist/erpassist/www/: chat.html  chat.py
erpassist/public/css/: erpassist.css
erpassist/public/js/: erpassist.bundle.js
