[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpassist"
version = "0.0.1"
description = "AI-powered assistant for ERPNext"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "support@yourcompany.com"}
]
dependencies = [
    "frappe",
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/africanwebguy/erpassist"
Documentation = "https://github.com/africanwebguy/erpassist"
Repository = "https://github.com/africanwebguy/erpassist"

[tool.setuptools]
packages = ["erpassist"]

[tool.setuptools.package-data]
erpassist = ["**/*.json", "**/*.js", "**/*.css", "**/*.html", "**/*.py", "**/*.md", "**/*.txt"]
