[metadata]
name = erpassist
version = 0.0.1
description = AI-powered assistant for ERPNext
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Company
author_email = support@yourcompany.com
license = MIT
url = https://github.com/africanwebguy/erpassist
project_urls =
    Bug Tracker = https://github.com/africanwebguy/erpassist/issues
    Documentation = https://github.com/africanwebguy/erpassist
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    frappe
    openai>=1.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    __pycache__
